test/e2e/crs/route/import.yaml
---
apiVersion: cloudfoundry.crossplane.io/v1alpha1
kind: Organization
metadata:
  name: e2e-route-import-org
spec:
  managementPolicies:
    - Observe
  forProvider:
    # change to your testing org
    name: cf-ci-e2e
---
# import space for route
apiVersion: cloudfoundry.crossplane.io/v1alpha1
kind: Space
metadata:
  name: e2e-route-import-space
spec:
  managementPolicies:
    - Observe
  forProvider:
    name: import-test-space-donotdelete
    orgRef:
      name: e2e-route-import-org
      policy:
        resolve: Always
